force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/PMC_CPQ_InvoiceItem__c.object-meta.xml
<CustomObject>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>INV ITEM-{0000}</displayFormat>
        <label>Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>