force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_BilledQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BilledQuantity__c</fullName>
    <label>Billed Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>