force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_CFOP__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CFOP__c</fullName>
    <description>Fiscal Code of Operations and Provisions (VBRP-J_1BCFOP). Brazilian tax code. E.g. &quot;5102/AA&quot;. 10 characters accommodates the format with a slash. Only relevant for the BR company.</description>
    <label>CFOP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>