force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_DeliveryItem__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Item</label>
    <referenceTo>ShipmentItem</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>InvoiceItems1</relationshipName>
    <type>Lookup</type>
</CustomField>