force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_Invoice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Invoice__c</fullName>
    <description>The Invoice associated with this Item.</description>
    <label>Invoice</label>
    <referenceTo>PMC_CPQ_Invoice__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>InvoiceItems2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>