force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_InvoiceLineStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_InvoiceLineStatus__c</fullName>
    <label>Invoice Line Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>