force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_MOT__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_MOT__c</fullName>
    <label>MOT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_MoT</valueSetName>
    </valueSet>
</CustomField>