force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_NetInvoicedQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_NetInvoicedQuantity__c</fullName>
    <label>Net Invoiced Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>