force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_NetInvoiceItemValue__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_NetInvoiceItemValue__c</fullName>
    <label>Net Invoice Item Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>