force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>InvoiceItems</relationshipName>
    <type>Lookup</type>
</CustomField>