force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_SAPDeliveryID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPDeliveryID__c</fullName>
    <label>SAP Delivery ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>