force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_SAPInvoice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPInvoice__c</fullName>
    <label>SAP Invoice</label>
    <length>10</length>
    <type>Text</type>
</CustomField>