force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_SAPInvoiceItemNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPInvoiceItemNumber__c</fullName>
    <externalId>true</externalId>
    <label>SAP Invoice Item Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>