force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_SAPInvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPInvoiceLine__c</fullName>
    <label>SAP Invoice Line</label>
    <type>TextArea</type>
</CustomField>