force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_SAPOrderLineID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPOrderLineID__c</fullName>
    <label>SAP Order Line ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>