force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_ShipDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShipDate__c</fullName>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>