force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>