force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_Subscription__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>