force-app/main/default/objects/PMC_CPQ_InvoiceItem__c/fields/PMC_CPQ_UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_UnitOfMeasure__c</fullName>
    <description>Holds the Unit of Measure value of the invoice item</description>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_SS_UnitOfMeasure</valueSetName>
    </valueSet>
</CustomField>